Change docs dependency to ipmininet
We want ipmininet's dependency to have
the same version as fixed by the setup file

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,4 @@
-future
-git+https://github.com/mininet/mininet.git
-ipaddress
-mako
+ipmininet
 sphinx_rtd_theme
 sphinxcontrib-apidoc
 sphinxcontrib-napoleon
